--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -28,6 +28,40 @@ header > .container  {
     font-size: 25px;
 }
 
+.logo a {
+    color: black;
+    text-decoration: none;
+}
+
+nav.menu-mobile {display: none;}
+nav.menu-mobile ul {
+    display: none;
+    width: 100%;
+    background: white;
+    position: absolute;
+    left: 0;
+    top: 50px;
+    z-index: 5;
+    text-align: center;
+}
+nav.menu-mobile li {
+    padding: 8px 0;
+    border: 1px solid black;
+}
+
+nav.menu-mobile li.selected {
+    background: rgb(225,225,225);
+}
+nav.menu-mobile a {
+    display: block;
+    color: black;
+    text-decoration: none;
+}
+nav.menu-mobile a:hover {
+    text-decoration: underline;
+}
+nav.menu-mobile h2 {cursor: pointer;}
+
 nav.menu-desktop li {
     display: inline-block;
     font-weight: lighter;
@@ -314,6 +348,293 @@ footer.footer2 p {
     font-weight: normal;
 }
 
+/* Page sobre */
+section.title-page {
+    padding: 30px;
+    width: 100%;
+    min-height: 150px;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+section.title-page > .container {position: relative; z-index: 5;}
+
+.overlay__title-page {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0,0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+}
+
+section.title-page h2 {
+    color: #52aaa7;
+    font-size: 35px;
+    font-weight: normal;
+}
+
+section.title-page p {
+    font-weight: lighter;
+    font-size: 16px;
+    color: white;
+    margin-top: 15px;
+}
+
+section.sobre__ {
+    margin-top: 30px;
+}
+
+section.sobre__ > .container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+section.sobre__ .img-sobre {
+    width: 40%;
+}
+
+.img-sobre img {
+    width: 100%;
+    height: 100%;
+}
+
+section.sobre__ .texto-sobre {
+    width: 60%;
+    padding: 0 20px;
+}
+
+section.sobre__ .texto-sobre p {
+    color: #646464;
+    font-size: 17px;
+    font-weight: lighter;
+}
+
+section.sobre__ .texto-sobre2 p {
+    margin-top: 20px;
+    color: #646464;
+    font-size: 17px;
+    font-weight: lighter;
+}
+
+/* parallax na pagina sobre */
+
+section.parallax {
+    margin-top: 30px;
+    padding: 30px 0;
+    width: 100%;
+    min-height: 200px;
+    background-image: url('../image/img3.jpg');
+    background-size: cover;
+    background-position: center;
+    /* propiedade que faz o efeito parallax */
+    background-attachment: fixed;
+    text-align: center;
+}
+
+section.parallax  h2.chamada-parallax{
+    border: 1px solid #52aaa7;
+    padding: 4px 20px;
+    display: inline-block;
+    font-weight: normal;
+    font-size: 32px;
+    color: #52aaa7;
+}
+
+section.parallax  p{
+    margin-top: 15px;
+    font-weight: lighter;
+    font-size: 16px;
+    color: white;
+}
+
+section.equipe {
+    margin-top: 30px;
+}
+
+section.equipe .membros {
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.membro-equipe {
+    margin-top: 30px;
+    width: 33.3%;
+}
+
+.membro-equipe img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.membro-equipe h2 {
+    color: #646464;
+    font-size: 25px;
+    font-weight: normal;
+}
+
+.membro-equipe p {
+    color: black;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+section.sobre-final {
+    margin-top: 30px;
+    background: rgb(225,225,225);
+}
+
+section.sobre-final > .container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+section.sobre-final .descricao {
+    width: 50%;
+    padding: 30px;
+}
+
+.descricao .card-text {
+    margin-top: 60px;
+}
+
+.descricao .card-text img {
+    max-width: 100%;
+}
+
+.descricao .card-text h3 {
+    color: white;
+    font-size: 23px;
+    font-weight: normal;
+    margin-top: -50px;
+}
+
+.descricao .texto {
+    margin-top: 30px;
+}
+
+.descricao .texto p {
+    color: #646464;
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+/* COntato */
+
+section.contato {
+    margin-top: 50px ;
+}
+
+section.contato > .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.form {
+    width: 65%;
+    margin: 0 auto;
+}
+
+.contato-msg {
+    width: 30%;
+}
+
+.form h2 {
+    border-left: 4px solid rgb(150,150,150);
+    background: rgb(225,225,225);
+    font-size: 16px;
+    font-weight: lighter;
+    padding: 4px 60px ;
+}
+
+.form form {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.form-group50 {
+    width: 48%;
+}
+
+.form-group100 {
+    width: 100%;
+}
+
+input[type=text],
+input[type=email] {
+    width: 100%;
+    height: 30px;
+    border: 1px solid #ccc;
+    padding-left: 8px;
+    margin: 10px 0;
+}
+
+textarea {
+    width: 100%;
+    height: 120px;
+    padding: 8px;
+    resize: vertical;
+}
+
+.contato-msg h2 {
+    font-size: 22px;
+    font-weight: normal;
+}
+
+.contato-msg p {
+    font-size: 16px;
+    font-weight: lighter;
+}
+
+.telefones {
+    margin-top: 15px;
+}
+
+.telefones p {
+    color: white;
+    background: #326866;
+    margin-top: 8px;
+    padding: 4px 55px 4px 25px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+@media screen and (max-width: 1000px) {
+    section.sobre__ .img-sobre {
+        width: 100%;
+    }
+    
+    section.sobre__ .texto-sobre {
+        width: 100%;
+        padding: 0;
+    }
+
+    section.sobre-final .descricao {
+        width: 100%;
+    }
+
+    .from {
+        width: 100%;
+    }
+    
+    .contato-msg {
+        margin-top: 20px;
+        width: 100%;
+    }
+}
 
 @media screen and (max-width: 768px) {
     .icones-diferencias {
@@ -342,5 +663,17 @@ footer.footer2 p {
         padding-top: 100%;
         padding: 15px;
     }
+
+    .membro-equipe {
+        width: 50%;
+    }
     
+}
+
+@media screen and (max-width: 500px){
+    nav.menu-mobile {display: block;}
+    nav.menu-desktop {display: none;}
+    .membro-equipe {
+        width: 100%;
+    }
 }
